[package]
name = "swarm-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
druid = "0.7.0"
cgmath = "0.18.0"
serde_json = "1.0"
delaunator = "1.0.1"

wasm-bindgen = "0.2.67"
console_error_panic_hook = "0.1.6"
rand = "0.8.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.8", features = ["js"] }

[dependencies.behavior-tree-lite]
# path = "../rusty-behavior-tree-lite"
git = "https://github.com/msakuta/rusty-behavior-tree-lite"
# tag = "v0.1.2"
commit = "48543d9d8bcf285379be6925a459413084b38415"
