[package]
name = "swarm-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
druid = { version = "0.8.2", optional = true }
cgmath = "0.18.0"
delaunator = "1.0.1"

wasm-bindgen = "0.2.67"
console_error_panic_hook = "0.1.6"
geo = "0.23.0"
rand = "0.8.5"
log = "0.4.17"

serde = { version = "1", features = ["derive"], optional = true }

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.8", features = ["js"] }

[dependencies.behavior-tree-lite]
# path = "../rusty-behavior-tree-lite"
git = "https://github.com/msakuta/rusty-behavior-tree-lite"
tag = "v0.2.3"
# commit = "96559722c23d7a637879192f635a785b071d6fb1"
# branch = "master"

[features]
druid = [ "dep:druid" ]
serde = [ "dep:serde" ]

[workspace]
members = [ "eframe", "druid" ]
