[package]
name = "swarm-rs-druid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = "0.8.2"
cgmath = "0.18.0"
delaunator = "1.0.1"

wasm-bindgen = "0.2.67"
console_error_panic_hook = "0.1.6"
geo = "0.23.0"
rand = "0.8.5"
log = "0.4.17"

swarm-rs = { path = "..", features = [ "druid" ] }
