[package]
name = "swarm-rs-eframe"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
egui = "0.20.0"
eframe = { version = "0.20.0", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }

# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }

swarm-rs = { path = "..", features = ["serde"] }
cgmath = "0.18.0"
wasm-bindgen = "0.2.84"
web-sys = { version = "0.3.61", features = ["Storage", "Window"] }
ron = "0.8.0"
enum-map = { version = "2", features = ["serde"] }

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"

# native:
# [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# tracing-subscriber = "0.3"

[features]
default = ["serde"]
serde = []
